// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup should render with both elements 1`] = `
<DocumentFragment>
  <div
    class="InputGroup-sc-1obbdqe-3 bgPpWR max-w-xs"
  >
    <div
      class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <div
      class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the left 1`] = `
<DocumentFragment>
  <div
    class="InputGroup-sc-1obbdqe-3 bgPpWR max-w-xs"
  >
    <div
      class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonStart-sc-1obbdqe-1 bsvVEG hMbbfK"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the right 1`] = `
<DocumentFragment>
  <div
    class="InputGroup-sc-1obbdqe-3 bgPpWR max-w-xs"
  >
    <div
      class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;
